--- a/index.css
+++ b/index.css
@@ -1,3 +1,31 @@
 body {
-    margin: 0;
+    margin: 50px 50px;
+    background: #1F2937;
+}
+
+#title-color-1 {
+    color: #FFFFFF;
+    font-family: 'Karla', sans-serif;
+}
+
+#title-color-2 {
+    color: #4ADF86;
+    font-family: 'Karla', sans-serif;
+}
+
+p {
+    color: grey;
+    font-family: 'Inter', sans-serif;
+    font-weight: 400;
+}
+
+button {
+    background-color: #4ADF86;
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    margin-top: 20px;
+    font-family: 'Inter', sans-serif;
+    font-weight: 500;
 }
