--- a/index.css
+++ b/index.css
@@ -1,6 +1,7 @@
 body {
     margin: 50px 50px;
     background: #1F2937;
+    max-width: 550px;
 }
 
 #title-color-1 {
@@ -28,4 +29,22 @@ button {
     margin-top: 20px;
     font-family: 'Inter', sans-serif;
     font-weight: 500;
+}
+
+#flex-container {
+    display: flex;
+    margin-top: 40px;
+    justify-content: space-between;
+    border-top: 1px solid #273549;
+}
+
+#password1, #password2 {
+    background-color: #273549;
+    text-align: center;
+    padding: 10px;
+    width: 211px;
+    border-radius: 5px;
+    margin-top: 30px;
+    color: #4ADF86;
+    font-family: 'Inter', sans-serif;
 }
